y.output
Terminals unused in grammar

   THEN


Estado 0 conflictos: 8 desplazamiento(s)/reducción(ones)
Estado 10 conflictos: 8 desplazamiento/reducción, 1 reducción/reducción
Estado 48 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 61 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 63 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 75 conflictos: 8 desplazamiento(s)/reducción(ones)
Estado 78 conflictos: 8 desplazamiento(s)/reducción(ones)
Estado 96 conflictos: 9 desplazamiento(s)/reducción(ones)
Estado 100 conflictos: 10 desplazamiento(s)/reducción(ones)
Estado 105 conflictos: 8 desplazamiento(s)/reducción(ones)
Estado 109 conflictos: 9 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: start $end

    1 start: programa

    2 programa: sentencia
    3         | programa sentencia

    4 sentencia: /* vacío */
    5          | declaracion
    6          | asignacion
    7          | ciclo
    8          | condicional
    9          | salida
   10          | entrada
   11          | entre
   12          | tomar

   13 entre: BETWEEN PAR_A ID COMA COR_A expresion PYC expresion COR_C PAR_C

   14 tomar: TAKE PAR_A oper PYC CONST_ENT PYC COR_A listapyc COR_C PAR_C
   15      | TAKE PAR_A oper PYC CONST_ENT PYC COR_A COR_C PAR_C

   16 listapyc: factor
   17         | listapyc PYC factor

   18 oper: OP_SUMA
   19     | OP_MULT
   20     | OP_DIV
   21     | OP_RESTA

   22 declaracion: DECVAR bloque_variables ENDDEC

   23 listavar: ID
   24         | listavar COMA ID

   25 tipodato: INTEGER
   26         | FLOAT
   27         | STRING

   28 condicional: IF PAR_A condicion PAR_C programa ELSE programa ENDIF
   29            | IF PAR_A condicion PAR_C programa ENDIF

   30 ciclo: WHILE PAR_A condicion PAR_C programa ENDWHILE

   31 entrada: READ ID

   32 salida: WRITE CONST_STR
   33       | WRITE ID

   34 asignacion: ID OP_ASIG expresion
   35           | ID OP_ASIG CONST_STR

   36 expresion: expresion OP_SUMA termino
   37          | expresion OP_RESTA termino
   38          | termino

   39 termino: termino OP_MULT factor
   40        | termino OP_DIV factor
   41        | factor

   42 factor: PAR_A expresion PAR_C
   43       | CONST_REAL
   44       | ID
   45       | CONST_ENT

   46 condicion: exp
   47          | exp AND exp_izq
   48          | exp OR exp_izq

   49 exp: comparacion
   50    | PAR_A comparacion PAR_C
   51    | expresion

   52 exp_izq: exp

   53 comparacion: expresion comparador factor
   54            | PAR_A condicion PAR_C
   55            | NOT condicion

   56 comparador: OP_MAYOR
   57           | OP_MENOR
   58           | OP_MENIGU
   59           | OP_MAYIGU
   60           | OP_IGUAL
   61           | OP_NO_IGUAL

   62 bloque_variables: bloque_variables listavar OP_TIPO tipodato
   63                 | listavar OP_TIPO tipodato


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
OP_ASIG (258) 34 35
OP_RESTA (259) 21 37
OP_SUMA (260) 18 36
OP_DIV (261) 20 40
OP_MULT (262) 19 39
OP_MAYOR (263) 56
OP_MAYIGU (264) 59
OP_MENOR (265) 57
OP_MENIGU (266) 58
OP_IGUAL (267) 60
OP_NO_IGUAL (268) 61
OP_TIPO (269) 62 63
TAKE (270) 14 15
BETWEEN (271) 13
WHILE (272) 30
IF (273) 28 29
INTEGER (274) 25
FLOAT (275) 26
STRING (276) 27
ELSE (277) 28
THEN (278)
DECVAR (279) 22
ENDDEC (280) 22
AND (281) 47
OR (282) 48
NOT (283) 55
WRITE (284) 32 33
READ (285) 31
COMA (286) 13 24
ENDIF (287) 28 29
ENDWHILE (288) 30
PAR_A (289) 13 14 15 28 29 30 42 50 54
PAR_C (290) 13 14 15 28 29 30 42 50 54
COR_A (291) 13 14 15
COR_C (292) 13 14 15
PYC (293) 13 14 15 17
ID (294) 13 23 24 31 33 34 35 44
CONST_ENT (295) 14 15 45
CONST_REAL (296) 43
CONST_STR (297) 32 35


No terminales con las reglas donde aparecen

$accept (43)
    en la izquierda: 0
start (44)
    en la izquierda: 1, en la derecha: 0
programa (45)
    en la izquierda: 2 3, en la derecha: 1 3 28 29 30
sentencia (46)
    en la izquierda: 4 5 6 7 8 9 10 11 12, en la derecha: 2 3
entre (47)
    en la izquierda: 13, en la derecha: 11
tomar (48)
    en la izquierda: 14 15, en la derecha: 12
listapyc (49)
    en la izquierda: 16 17, en la derecha: 14 17
oper (50)
    en la izquierda: 18 19 20 21, en la derecha: 14 15
declaracion (51)
    en la izquierda: 22, en la derecha: 5
listavar (52)
    en la izquierda: 23 24, en la derecha: 24 62 63
tipodato (53)
    en la izquierda: 25 26 27, en la derecha: 62 63
condicional (54)
    en la izquierda: 28 29, en la derecha: 8
ciclo (55)
    en la izquierda: 30, en la derecha: 7
entrada (56)
    en la izquierda: 31, en la derecha: 10
salida (57)
    en la izquierda: 32 33, en la derecha: 9
asignacion (58)
    en la izquierda: 34 35, en la derecha: 6
expresion (59)
    en la izquierda: 36 37 38, en la derecha: 13 34 36 37 42 51 53
termino (60)
    en la izquierda: 39 40 41, en la derecha: 36 37 38 39 40
factor (61)
    en la izquierda: 42 43 44 45, en la derecha: 16 17 39 40 41 53
condicion (62)
    en la izquierda: 46 47 48, en la derecha: 28 29 30 54 55
exp (63)
    en la izquierda: 49 50 51, en la derecha: 46 47 48 52
exp_izq (64)
    en la izquierda: 52, en la derecha: 47 48
comparacion (65)
    en la izquierda: 53 54 55, en la derecha: 49 50
comparador (66)
    en la izquierda: 56 57 58 59 60 61, en la derecha: 53
bloque_variables (67)
    en la izquierda: 62 63, en la derecha: 22 62


estado 0

    0 $accept: . start $end

    TAKE     desplazar e ir al estado 1
    BETWEEN  desplazar e ir al estado 2
    WHILE    desplazar e ir al estado 3
    IF       desplazar e ir al estado 4
    DECVAR   desplazar e ir al estado 5
    WRITE    desplazar e ir al estado 6
    READ     desplazar e ir al estado 7
    ID       desplazar e ir al estado 8

    TAKE      [reduce usando la regla 4 (sentencia)]
    BETWEEN   [reduce usando la regla 4 (sentencia)]
    WHILE     [reduce usando la regla 4 (sentencia)]
    IF        [reduce usando la regla 4 (sentencia)]
    DECVAR    [reduce usando la regla 4 (sentencia)]
    WRITE     [reduce usando la regla 4 (sentencia)]
    READ      [reduce usando la regla 4 (sentencia)]
    ID        [reduce usando la regla 4 (sentencia)]
    $default  reduce usando la regla 4 (sentencia)

    start        ir al estado 9
    programa     ir al estado 10
    sentencia    ir al estado 11
    entre        ir al estado 12
    tomar        ir al estado 13
    declaracion  ir al estado 14
    condicional  ir al estado 15
    ciclo        ir al estado 16
    entrada      ir al estado 17
    salida       ir al estado 18
    asignacion   ir al estado 19


estado 1

   14 tomar: TAKE . PAR_A oper PYC CONST_ENT PYC COR_A listapyc COR_C PAR_C
   15      | TAKE . PAR_A oper PYC CONST_ENT PYC COR_A COR_C PAR_C

    PAR_A  desplazar e ir al estado 20


estado 2

   13 entre: BETWEEN . PAR_A ID COMA COR_A expresion PYC expresion COR_C PAR_C

    PAR_A  desplazar e ir al estado 21


estado 3

   30 ciclo: WHILE . PAR_A condicion PAR_C programa ENDWHILE

    PAR_A  desplazar e ir al estado 22


estado 4

   28 condicional: IF . PAR_A condicion PAR_C programa ELSE programa ENDIF
   29            | IF . PAR_A condicion PAR_C programa ENDIF

    PAR_A  desplazar e ir al estado 23


estado 5

   22 declaracion: DECVAR . bloque_variables ENDDEC

    ID  desplazar e ir al estado 24

    listavar          ir al estado 25
    bloque_variables  ir al estado 26


estado 6

   32 salida: WRITE . CONST_STR
   33       | WRITE . ID

    ID         desplazar e ir al estado 27
    CONST_STR  desplazar e ir al estado 28


estado 7

   31 entrada: READ . ID

    ID  desplazar e ir al estado 29


estado 8

   34 asignacion: ID . OP_ASIG expresion
   35           | ID . OP_ASIG CONST_STR

    OP_ASIG  desplazar e ir al estado 30


estado 9

    0 $accept: start . $end

    $end  desplazar e ir al estado 31


estado 10

    1 start: programa .
    3 programa: programa . sentencia

    TAKE     desplazar e ir al estado 1
    BETWEEN  desplazar e ir al estado 2
    WHILE    desplazar e ir al estado 3
    IF       desplazar e ir al estado 4
    DECVAR   desplazar e ir al estado 5
    WRITE    desplazar e ir al estado 6
    READ     desplazar e ir al estado 7
    ID       desplazar e ir al estado 8

    $end      reduce usando la regla 1 (start)
    $end      [reduce usando la regla 4 (sentencia)]
    TAKE      [reduce usando la regla 4 (sentencia)]
    BETWEEN   [reduce usando la regla 4 (sentencia)]
    WHILE     [reduce usando la regla 4 (sentencia)]
    IF        [reduce usando la regla 4 (sentencia)]
    DECVAR    [reduce usando la regla 4 (sentencia)]
    WRITE     [reduce usando la regla 4 (sentencia)]
    READ      [reduce usando la regla 4 (sentencia)]
    ID        [reduce usando la regla 4 (sentencia)]
    $default  reduce usando la regla 1 (start)

    sentencia    ir al estado 32
    entre        ir al estado 12
    tomar        ir al estado 13
    declaracion  ir al estado 14
    condicional  ir al estado 15
    ciclo        ir al estado 16
    entrada      ir al estado 17
    salida       ir al estado 18
    asignacion   ir al estado 19


estado 11

    2 programa: sentencia .

    $default  reduce usando la regla 2 (programa)


estado 12

   11 sentencia: entre .

    $default  reduce usando la regla 11 (sentencia)


estado 13

   12 sentencia: tomar .

    $default  reduce usando la regla 12 (sentencia)


estado 14

    5 sentencia: declaracion .

    $default  reduce usando la regla 5 (sentencia)


estado 15

    8 sentencia: condicional .

    $default  reduce usando la regla 8 (sentencia)


estado 16

    7 sentencia: ciclo .

    $default  reduce usando la regla 7 (sentencia)


estado 17

   10 sentencia: entrada .

    $default  reduce usando la regla 10 (sentencia)


estado 18

    9 sentencia: salida .

    $default  reduce usando la regla 9 (sentencia)


estado 19

    6 sentencia: asignacion .

    $default  reduce usando la regla 6 (sentencia)


estado 20

   14 tomar: TAKE PAR_A . oper PYC CONST_ENT PYC COR_A listapyc COR_C PAR_C
   15      | TAKE PAR_A . oper PYC CONST_ENT PYC COR_A COR_C PAR_C

    OP_RESTA  desplazar e ir al estado 33
    OP_SUMA   desplazar e ir al estado 34
    OP_DIV    desplazar e ir al estado 35
    OP_MULT   desplazar e ir al estado 36

    oper  ir al estado 37


estado 21

   13 entre: BETWEEN PAR_A . ID COMA COR_A expresion PYC expresion COR_C PAR_C

    ID  desplazar e ir al estado 38


estado 22

   30 ciclo: WHILE PAR_A . condicion PAR_C programa ENDWHILE

    NOT         desplazar e ir al estado 39
    PAR_A       desplazar e ir al estado 40
    ID          desplazar e ir al estado 41
    CONST_ENT   desplazar e ir al estado 42
    CONST_REAL  desplazar e ir al estado 43

    expresion    ir al estado 44
    termino      ir al estado 45
    factor       ir al estado 46
    condicion    ir al estado 47
    exp          ir al estado 48
    comparacion  ir al estado 49


estado 23

   28 condicional: IF PAR_A . condicion PAR_C programa ELSE programa ENDIF
   29            | IF PAR_A . condicion PAR_C programa ENDIF

    NOT         desplazar e ir al estado 39
    PAR_A       desplazar e ir al estado 40
    ID          desplazar e ir al estado 41
    CONST_ENT   desplazar e ir al estado 42
    CONST_REAL  desplazar e ir al estado 43

    expresion    ir al estado 44
    termino      ir al estado 45
    factor       ir al estado 46
    condicion    ir al estado 50
    exp          ir al estado 48
    comparacion  ir al estado 49


estado 24

   23 listavar: ID .

    $default  reduce usando la regla 23 (listavar)


estado 25

   24 listavar: listavar . COMA ID
   63 bloque_variables: listavar . OP_TIPO tipodato

    OP_TIPO  desplazar e ir al estado 51
    COMA     desplazar e ir al estado 52


estado 26

   22 declaracion: DECVAR bloque_variables . ENDDEC
   62 bloque_variables: bloque_variables . listavar OP_TIPO tipodato

    ENDDEC  desplazar e ir al estado 53
    ID      desplazar e ir al estado 24

    listavar  ir al estado 54


estado 27

   33 salida: WRITE ID .

    $default  reduce usando la regla 33 (salida)


estado 28

   32 salida: WRITE CONST_STR .

    $default  reduce usando la regla 32 (salida)


estado 29

   31 entrada: READ ID .

    $default  reduce usando la regla 31 (entrada)


estado 30

   34 asignacion: ID OP_ASIG . expresion
   35           | ID OP_ASIG . CONST_STR

    PAR_A       desplazar e ir al estado 55
    ID          desplazar e ir al estado 41
    CONST_ENT   desplazar e ir al estado 42
    CONST_REAL  desplazar e ir al estado 43
    CONST_STR   desplazar e ir al estado 56

    expresion  ir al estado 57
    termino    ir al estado 45
    factor     ir al estado 46


estado 31

    0 $accept: start $end .

    $default  aceptar


estado 32

    3 programa: programa sentencia .

    $default  reduce usando la regla 3 (programa)


estado 33

   21 oper: OP_RESTA .

    $default  reduce usando la regla 21 (oper)


estado 34

   18 oper: OP_SUMA .

    $default  reduce usando la regla 18 (oper)


estado 35

   20 oper: OP_DIV .

    $default  reduce usando la regla 20 (oper)


estado 36

   19 oper: OP_MULT .

    $default  reduce usando la regla 19 (oper)


estado 37

   14 tomar: TAKE PAR_A oper . PYC CONST_ENT PYC COR_A listapyc COR_C PAR_C
   15      | TAKE PAR_A oper . PYC CONST_ENT PYC COR_A COR_C PAR_C

    PYC  desplazar e ir al estado 58


estado 38

   13 entre: BETWEEN PAR_A ID . COMA COR_A expresion PYC expresion COR_C PAR_C

    COMA  desplazar e ir al estado 59


estado 39

   55 comparacion: NOT . condicion

    NOT         desplazar e ir al estado 39
    PAR_A       desplazar e ir al estado 40
    ID          desplazar e ir al estado 41
    CONST_ENT   desplazar e ir al estado 42
    CONST_REAL  desplazar e ir al estado 43

    expresion    ir al estado 44
    termino      ir al estado 45
    factor       ir al estado 46
    condicion    ir al estado 60
    exp          ir al estado 48
    comparacion  ir al estado 49


estado 40

   42 factor: PAR_A . expresion PAR_C
   50 exp: PAR_A . comparacion PAR_C
   54 comparacion: PAR_A . condicion PAR_C

    NOT         desplazar e ir al estado 39
    PAR_A       desplazar e ir al estado 40
    ID          desplazar e ir al estado 41
    CONST_ENT   desplazar e ir al estado 42
    CONST_REAL  desplazar e ir al estado 43

    expresion    ir al estado 61
    termino      ir al estado 45
    factor       ir al estado 46
    condicion    ir al estado 62
    exp          ir al estado 48
    comparacion  ir al estado 63


estado 41

   44 factor: ID .

    $default  reduce usando la regla 44 (factor)


estado 42

   45 factor: CONST_ENT .

    $default  reduce usando la regla 45 (factor)


estado 43

   43 factor: CONST_REAL .

    $default  reduce usando la regla 43 (factor)


estado 44

   36 expresion: expresion . OP_SUMA termino
   37          | expresion . OP_RESTA termino
   51 exp: expresion .
   53 comparacion: expresion . comparador factor

    OP_RESTA     desplazar e ir al estado 64
    OP_SUMA      desplazar e ir al estado 65
    OP_MAYOR     desplazar e ir al estado 66
    OP_MAYIGU    desplazar e ir al estado 67
    OP_MENOR     desplazar e ir al estado 68
    OP_MENIGU    desplazar e ir al estado 69
    OP_IGUAL     desplazar e ir al estado 70
    OP_NO_IGUAL  desplazar e ir al estado 71

    $default  reduce usando la regla 51 (exp)

    comparador  ir al estado 72


estado 45

   38 expresion: termino .
   39 termino: termino . OP_MULT factor
   40        | termino . OP_DIV factor

    OP_DIV   desplazar e ir al estado 73
    OP_MULT  desplazar e ir al estado 74

    $default  reduce usando la regla 38 (expresion)


estado 46

   41 termino: factor .

    $default  reduce usando la regla 41 (termino)


estado 47

   30 ciclo: WHILE PAR_A condicion . PAR_C programa ENDWHILE

    PAR_C  desplazar e ir al estado 75


estado 48

   46 condicion: exp .
   47          | exp . AND exp_izq
   48          | exp . OR exp_izq

    AND  desplazar e ir al estado 76
    OR   desplazar e ir al estado 77

    AND       [reduce usando la regla 46 (condicion)]
    OR        [reduce usando la regla 46 (condicion)]
    $default  reduce usando la regla 46 (condicion)


estado 49

   49 exp: comparacion .

    $default  reduce usando la regla 49 (exp)


estado 50

   28 condicional: IF PAR_A condicion . PAR_C programa ELSE programa ENDIF
   29            | IF PAR_A condicion . PAR_C programa ENDIF

    PAR_C  desplazar e ir al estado 78


estado 51

   63 bloque_variables: listavar OP_TIPO . tipodato

    INTEGER  desplazar e ir al estado 79
    FLOAT    desplazar e ir al estado 80
    STRING   desplazar e ir al estado 81

    tipodato  ir al estado 82


estado 52

   24 listavar: listavar COMA . ID

    ID  desplazar e ir al estado 83


estado 53

   22 declaracion: DECVAR bloque_variables ENDDEC .

    $default  reduce usando la regla 22 (declaracion)


estado 54

   24 listavar: listavar . COMA ID
   62 bloque_variables: bloque_variables listavar . OP_TIPO tipodato

    OP_TIPO  desplazar e ir al estado 84
    COMA     desplazar e ir al estado 52


estado 55

   42 factor: PAR_A . expresion PAR_C

    PAR_A       desplazar e ir al estado 55
    ID          desplazar e ir al estado 41
    CONST_ENT   desplazar e ir al estado 42
    CONST_REAL  desplazar e ir al estado 43

    expresion  ir al estado 85
    termino    ir al estado 45
    factor     ir al estado 46


estado 56

   35 asignacion: ID OP_ASIG CONST_STR .

    $default  reduce usando la regla 35 (asignacion)


estado 57

   34 asignacion: ID OP_ASIG expresion .
   36 expresion: expresion . OP_SUMA termino
   37          | expresion . OP_RESTA termino

    OP_RESTA  desplazar e ir al estado 64
    OP_SUMA   desplazar e ir al estado 65

    $default  reduce usando la regla 34 (asignacion)


estado 58

   14 tomar: TAKE PAR_A oper PYC . CONST_ENT PYC COR_A listapyc COR_C PAR_C
   15      | TAKE PAR_A oper PYC . CONST_ENT PYC COR_A COR_C PAR_C

    CONST_ENT  desplazar e ir al estado 86


estado 59

   13 entre: BETWEEN PAR_A ID COMA . COR_A expresion PYC expresion COR_C PAR_C

    COR_A  desplazar e ir al estado 87


estado 60

   55 comparacion: NOT condicion .

    $default  reduce usando la regla 55 (comparacion)


estado 61

   36 expresion: expresion . OP_SUMA termino
   37          | expresion . OP_RESTA termino
   42 factor: PAR_A expresion . PAR_C
   51 exp: expresion .
   53 comparacion: expresion . comparador factor

    OP_RESTA     desplazar e ir al estado 64
    OP_SUMA      desplazar e ir al estado 65
    OP_MAYOR     desplazar e ir al estado 66
    OP_MAYIGU    desplazar e ir al estado 67
    OP_MENOR     desplazar e ir al estado 68
    OP_MENIGU    desplazar e ir al estado 69
    OP_IGUAL     desplazar e ir al estado 70
    OP_NO_IGUAL  desplazar e ir al estado 71
    PAR_C        desplazar e ir al estado 88

    PAR_C     [reduce usando la regla 51 (exp)]
    $default  reduce usando la regla 51 (exp)

    comparador  ir al estado 72


estado 62

   54 comparacion: PAR_A condicion . PAR_C

    PAR_C  desplazar e ir al estado 89


estado 63

   49 exp: comparacion .
   50    | PAR_A comparacion . PAR_C

    PAR_C  desplazar e ir al estado 90

    PAR_C     [reduce usando la regla 49 (exp)]
    $default  reduce usando la regla 49 (exp)


estado 64

   37 expresion: expresion OP_RESTA . termino

    PAR_A       desplazar e ir al estado 55
    ID          desplazar e ir al estado 41
    CONST_ENT   desplazar e ir al estado 42
    CONST_REAL  desplazar e ir al estado 43

    termino  ir al estado 91
    factor   ir al estado 46


estado 65

   36 expresion: expresion OP_SUMA . termino
